[metadata]
name = pycustomlib
author = jfernandz
author_email = jfernandz1290@gmail.com
description = Some custom packages with custom classes/methods
long_description = file: README.adoc
long_description_content_type = text/asciidoc
url = https://github.com/jfernandz/pylibraries

[options]
packages = find:
install_requires =
	paramiko

[options.extras_require]
dev =
	pip-tools
	wheel
	setuptools-scm
test =
	pytest
	pytest-cov
	pytest-mock
	pyflakes
	pylint

[options.package_data]

[options.packages.find]
exclude = 
	test*
